MAVrec/arduinoTeensy/etc-microscribe/MicroScribe SDK 3.0/samples/Probe_Mgr/Probe_Mgr/armdll32.h



//Use hci_result as if it were an enumerated type.  Compare variables of
//this type to the string constants declared below.  An hci_result is
//actually a string, so it can be directly printed as well.
typedef char*   hci_result;

typedef float   length;

typedef float   angle;
typedef struct
{
	length  x;
	length  y;
	length  z;
} length_3D;


//General 3D angular coordinate data type
typedef struct
{
	angle   x;
	angle   y;
	angle   z;
} angle_3D;


typedef struct
{
	DWORD status;
	UINT Baud;
	UINT PortNumber;
} device_status;


//Record containing all HCI data
//Declare one of these structs for each Microscribe HCI in use.
//The hci_connect() command will establish communication with a Microscribe
//HCI and set up an hci_rec corresponding to it.
//Example references: (assuming 'hci' is declared as an hci_rec)
//hci.button[2] - ON/OFF status of button #2
//hci.encoder[1] - total count for encoder #1
//hci.baud_rate - baud rate in use with this Microscribe HCI

typedef struct hci_rec
{
//Communications parameters
	int             port_num;		//This HCI's serial port number
	long int        baud_rate;		//This Probe's baud rate
	float           slow_timeout;	//Timeout period for slow process
	float           fast_timeout;	//Timeout period for fast process
	packet_rec      packet;			//The current packet
	int             packets_expected; //Determines whether timeout is important

	//Marker field lets you mark different segments of data in incoming
	//buffer.  hci_insert_marker() makes HCI insert a marker into the
	//data stream, so you can switch modes in a host application
	//without misinterpreting some data that may still be waiting
	//in the buffer; just insert a marker, and don't switch modes
	//until you see the marker come back.
	int             marker;
	int             marker_updated;

//Primary quantities:
	int     buttons;				//button bits all together
	int     button [NUM_BUTTONS];	//ON/OFF flags for buttons
	long    timer;					//Running counter
	int     analog [NUM_ANALOGS];	//A/D channels
	int     encoder [NUM_ENCODERS];	//Encoder counts

	//Normalization values for primary quantities:
	//These values give some reference or normalization quantity for each field.
	//A zero in any of these fields means there is no hardware
	//support for that data in this particular system.
	int     button_supported [NUM_BUTTONS];	//zero = button not supported
	int     max_timer;						//Max count reached before wrapping
	int     max_analog [NUM_ANALOGS];		//Full-scale A/D reading
	int     max_encoder [NUM_ENCODERS];		//Max value each encoder reaches INCLUDING quadrature

	//Status of primary fields:
	//A zero in any of these fields indicates that the corresponding
	//primary quantity is out of date (wasn't updated by the previous packets)
	//Note: buttons are updated with every packet
	int     timer_updated;
	int     analog_updated [NUM_ANALOGS];
	int     encoder_updated [NUM_ENCODERS];

	//Encoder "home" position:
	//The relative encoders supported by the Microscribe HCI only report
	//their NET angular motion from the time they are powered up.  If
	//an encoder's initial angular value is important, it must somehow
	//be assumed or calibrated at start-up.  These fields contain values
	//to be assumed at start-up.  They can be read from or written to the
	//Microscribe HCI EEPROM.  If written to the Microscribe HCI EEPROM,
	//these "home" values will be retained even after power is turned off.
	int     home_pos [NUM_ENCODERS];

	//Home position references:
	//In many cases some calibration procedure will be required to ensure
	//that the encoder positions truly match the assumed home position.
	//This array can store any data that is useful for that purpose.
	 int    home_ref [NUM_ENCODERS];

	//Descriptor strings:
	//These strings provide information about a particular HCI system.
	char    serial_number [MAX_STRING_SIZE];
	char    product_name [MAX_STRING_SIZE];
	char    product_id [MAX_STRING_SIZE];
	char    model_name [MAX_STRING_SIZE];
	char    comment [MAX_STRING_SIZE];
	char    param_format [MAX_STRING_SIZE];
	char    version [MAX_STRING_SIZE];

	//Function pointers to handle application-specific functions
	//These pointers are initialized to NULL.
	//The user can make these point to handlers for each specific condition.
	//These handlers must be declared as follows:
	//hci_result   my_handler(hci_rec *hci, hci_result condition);
	//See programmer's guide for more discussion.

	//Handlers for errors
	hci_result      (*BAD_PORT_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*CANT_OPEN_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*NO_HCI_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*CANT_BEGIN_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*TIMED_OUT_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_PACKET_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_PASSWORD_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_VERSION_handler)(struct hci_rec *hci, hci_result condition);
	hci_result      (*BAD_FORMAT_handler)(struct hci_rec *hci, hci_result condition);

	//Handler to use for an error if everything above is NULL
	//The simplest way to get diagnostic reporting is to
	//set default_handler to a function that outputs the string
	//that is passed as the 'condition'.  This can be implemented
	//under any operating system or window environment by including
	//the appropriate o.s. calls in the function pointed to by
	//this handler pointer.
	hci_result      (*default_handler)();

	//Extra field available for user's application-specific purpose
	long int        user_data;
} hci_rec;

//Error Handler function definition
typedef hci_result ( *PERRORHANDLER ) (struct hci_rec *hci, hci_result condition);

ARMDLL32_API  int	__stdcall	ArmGetButtonsState		(DWORD *pdwButtonsState);

ARMDLL32_API  int	__stdcall	ArmGetDeviceStatus		(device_status *pDeviceStatus);

ARMDLL32_API  int	__stdcall	ArmSetErrorHandlerFunction(int iErrorType, PERRORHANDLER pErrorHandlerFunction );

ARMDLL32_API  int	__stdcall	ArmGetNumDOF			(int *piNumDOF);

ARMDLL32_API  int	__stdcall	ArmGetEncoderCount		(int *piEncoderValues );

ARMDLL32_API  int	__stdcall	ArmGetJointAngles		(int iUnitID, angle *piJointAngle );

ARMDLL32_API  int	__stdcall	ArmSetHomeEncoderOffset (int *piEncoderOffsets);

ARMDLL32_API  int	__stdcall	ArmSetTipPositionOffset (int iUnitID, length Xoffset, length Yoffset, length ZOffset);

ARMDLL32_API  int	__stdcall	ArmSetSoftHome();


ARMDLL32_API  int	__stdcall	ArmGetFullTip(length_3D* pPosition, 
												angle_3D  * vecT0, angle_3D *vecT1, angle_3D *vecT2, DWORD *pdwButtonsState);



//custom tip support functions
ARMDLL32_API int   __stdcall ArmSetTipProfile(int _tipNumber);

ARMDLL32_API int   __stdcall ArmGetTipProfile(int *_tipNumber);

ARMDLL32_API int   __stdcall ArmSaveTipProfile(int _tipNumber, 
												int *_homeDelta,
												float *_tipOffset,
												char *_name);

ARMDLL32_API int   __stdcall ArmGetTipProfileHomeOffset(int _tipNumber,
														 int *_homeDelta);

ARMDLL32_API int   __stdcall ArmGetTipProfilePositionOffset(int _tipNumber,
														     float *_tipOffset);

ARMDLL32_API int   __stdcall ArmGetTipNameData(int _tipNumber,
												char *_name);

ARMDLL32_API int  __stdcall ArmGenerateTipPositionOffset(length_3D *_points,
														 angle_3D *_orientations,
													     int _numPoints,
														 length_3D &_offset );


ARMDLL32_API int  __stdcall ArmGenerateTipPositionOffsetEx(length_3D *_points,
														 angle_3D *_orientations,
													     int _numPoints,
														 length_3D &_offset,
														 angle_3D *_unitOrientations );