MAVrec/arduinoTeensy/etc-microscribe/MicroscribeDLLLibrary.java

	/**
	 * Original signature : <code>int ArmGetButtonsState(DWORD*)</code><br>
	 * <i>native declaration : line 478</i>
	 */
	int ArmGetButtonsState(IntBuffer pdwButtonsState);
	/**
	 * Original signature : <code>int ArmGetDeviceStatus(device_status*)</code><br>
	 * <i>native declaration : line 479</i>
	 */
	int ArmGetDeviceStatus(device_status pDeviceStatus);
	/**
	 * Original signature : <code>int ArmSetErrorHandlerFunction(int, PERRORHANDLER)</code><br>
	 * <i>native declaration : line 480</i>
	 */
	int ArmSetErrorHandlerFunction(int iErrorType, MicroscrobeDLLLibrary.PERRORHANDLER pErrorHandlerFunction);
	/**
	 * Original signature : <code>int ArmGetNumDOF(int*)</code><br>
	 * <i>native declaration : line 481</i><br>
	 * @deprecated use the safer methods {@link #ArmGetNumDOF(java.nio.IntBuffer)} and {@link #ArmGetNumDOF(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmGetNumDOF(IntByReference piNumDOF);
	/**
	 * Original signature : <code>int ArmGetNumDOF(int*)</code><br>
	 * <i>native declaration : line 481</i>
	 */
	int ArmGetNumDOF(IntBuffer piNumDOF);
	/**
	 * Original signature : <code>int ArmGetEncoderCount(int*)</code><br>
	 * <i>native declaration : line 482</i><br>
	 * @deprecated use the safer methods {@link #ArmGetEncoderCount(java.nio.IntBuffer)} and {@link #ArmGetEncoderCount(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmGetEncoderCount(IntByReference piEncoderValues);
	/**
	 * Original signature : <code>int ArmGetEncoderCount(int*)</code><br>
	 * <i>native declaration : line 482</i>
	 */
	int ArmGetEncoderCount(IntBuffer piEncoderValues);
	/**
	 * Original signature : <code>int ArmGetJointAngles(int, angle*)</code><br>
	 * <i>native declaration : line 483</i><br>
	 * @deprecated use the safer methods {@link #ArmGetJointAngles(int, java.nio.FloatBuffer)} and {@link #ArmGetJointAngles(int, com.sun.jna.ptr.FloatByReference)} instead
	 */
	@Deprecated 
	int ArmGetJointAngles(int iUnitID, FloatByReference piJointAngle);
	/**
	 * Original signature : <code>int ArmGetJointAngles(int, angle*)</code><br>
	 * <i>native declaration : line 483</i>
	 */
	int ArmGetJointAngles(int iUnitID, FloatBuffer piJointAngle);
	/**
	 * Original signature : <code>int ArmSetHomeEncoderOffset(int*)</code><br>
	 * <i>native declaration : line 484</i><br>
	 * @deprecated use the safer methods {@link #ArmSetHomeEncoderOffset(java.nio.IntBuffer)} and {@link #ArmSetHomeEncoderOffset(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmSetHomeEncoderOffset(IntByReference piEncoderOffsets);
	/**
	 * Original signature : <code>int ArmSetHomeEncoderOffset(int*)</code><br>
	 * <i>native declaration : line 484</i>
	 */
	int ArmSetHomeEncoderOffset(IntBuffer piEncoderOffsets);
	/**
	 * Original signature : <code>int ArmSetTipPositionOffset(int, length, length, length)</code><br>
	 * <i>native declaration : line 485</i>
	 */
	int ArmSetTipPositionOffset(int iUnitID, float Xoffset, float Yoffset, float ZOffset);
	/**
	 * Original signature : <code>int ArmSetSoftHome()</code><br>
	 * <i>native declaration : line 486</i>
	 */
	int ArmSetSoftHome();
	/**
	 * Original signature : <code>int ArmGetFullTip(length_3D*, angle_3D*, angle_3D*, angle_3D*, DWORD*)</code><br>
	 * <i>native declaration : line 488</i><br>
	 * @deprecated use the safer methods {@link #ArmGetFullTip(microscrobedll.length_3D, microscrobedll.angle_3D, microscrobedll.angle_3D, microscrobedll.angle_3D, java.nio.IntBuffer)} and {@link #ArmGetFullTip(microscrobedll.length_3D, microscrobedll.angle_3D, microscrobedll.angle_3D, microscrobedll.angle_3D, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmGetFullTip(length_3D pPosition, angle_3D vecT0, angle_3D vecT1, angle_3D vecT2, IntByReference pdwButtonsState);
	/**
	 * Original signature : <code>int ArmGetFullTip(length_3D*, angle_3D*, angle_3D*, angle_3D*, DWORD*)</code><br>
	 * <i>native declaration : line 488</i>
	 */
	int ArmGetFullTip(length_3D pPosition, angle_3D vecT0, angle_3D vecT1, angle_3D vecT2, IntBuffer pdwButtonsState);
	/**
	 * custom tip support functions<br>
	 * Original signature : <code>int ArmSetTipProfile(int)</code><br>
	 * <i>native declaration : line 493</i>
	 */
	int ArmSetTipProfile(int _tipNumber);
	/**
	 * Original signature : <code>int ArmGetTipProfile(int*)</code><br>
	 * <i>native declaration : line 494</i><br>
	 * @deprecated use the safer methods {@link #ArmGetTipProfile(java.nio.IntBuffer)} and {@link #ArmGetTipProfile(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmGetTipProfile(IntByReference _tipNumber);
	/**
	 * Original signature : <code>int ArmGetTipProfile(int*)</code><br>
	 * <i>native declaration : line 494</i>
	 */
	int ArmGetTipProfile(IntBuffer _tipNumber);
	/**
	 * Original signature : <code>int ArmSaveTipProfile(int, int*, float*, char*)</code><br>
	 * <i>native declaration : line 495</i><br>
	 * @deprecated use the safer methods {@link #ArmSaveTipProfile(int, java.nio.IntBuffer, java.nio.FloatBuffer, java.nio.ByteBuffer)} and {@link #ArmSaveTipProfile(int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int ArmSaveTipProfile(int _tipNumber, IntByReference _homeDelta, FloatByReference _tipOffset, Pointer _name);
	/**
	 * Original signature : <code>int ArmSaveTipProfile(int, int*, float*, char*)</code><br>
	 * <i>native declaration : line 495</i>
	 */
	int ArmSaveTipProfile(int _tipNumber, IntBuffer _homeDelta, FloatBuffer _tipOffset, ByteBuffer _name);
	/**
	 * Original signature : <code>int ArmGetTipProfileHomeOffset(int, int*)</code><br>
	 * <i>native declaration : line 499</i><br>
	 * @deprecated use the safer methods {@link #ArmGetTipProfileHomeOffset(int, java.nio.IntBuffer)} and {@link #ArmGetTipProfileHomeOffset(int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int ArmGetTipProfileHomeOffset(int _tipNumber, IntByReference _homeDelta);
	/**
	 * Original signature : <code>int ArmGetTipProfileHomeOffset(int, int*)</code><br>
	 * <i>native declaration : line 499</i>
	 */
	int ArmGetTipProfileHomeOffset(int _tipNumber, IntBuffer _homeDelta);
	/**
	 * Original signature : <code>int ArmGetTipProfilePositionOffset(int, float*)</code><br>
	 * <i>native declaration : line 501</i><br>
	 * @deprecated use the safer methods {@link #ArmGetTipProfilePositionOffset(int, java.nio.FloatBuffer)} and {@link #ArmGetTipProfilePositionOffset(int, com.sun.jna.ptr.FloatByReference)} instead
	 */
	@Deprecated 
	int ArmGetTipProfilePositionOffset(int _tipNumber, FloatByReference _tipOffset);
	/**
	 * Original signature : <code>int ArmGetTipProfilePositionOffset(int, float*)</code><br>
	 * <i>native declaration : line 501</i>
	 */
	int ArmGetTipProfilePositionOffset(int _tipNumber, FloatBuffer _tipOffset);
	/**
	 * Original signature : <code>int ArmGetTipNameData(int, char*)</code><br>
	 * <i>native declaration : line 503</i><br>
	 * @deprecated use the safer methods {@link #ArmGetTipNameData(int, java.nio.ByteBuffer)} and {@link #ArmGetTipNameData(int, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int ArmGetTipNameData(int _tipNumber, Pointer _name);
	/**
	 * Original signature : <code>int ArmGetTipNameData(int, char*)</code><br>
	 * <i>native declaration : line 503</i>
	 */
	int ArmGetTipNameData(int _tipNumber, ByteBuffer _name);
	/**
	 * Original signature : <code>int ArmGenerateTipPositionOffset(length_3D*, angle_3D*, int, length_3D&)</code><br>
	 * <i>native declaration : line 505</i>
	 */
	int ArmGenerateTipPositionOffset(length_3D _points, angle_3D _orientations, int _numPoints, length_3D _offset);
	/**
	 * Original signature : <code>int ArmGenerateTipPositionOffsetEx(length_3D*, angle_3D*, int, length_3D&, angle_3D*)</code><br>
	 * <i>native declaration : line 510</i>
	 */
	int ArmGenerateTipPositionOffsetEx(length_3D _points, angle_3D _orientations, int _numPoints, length_3D _offset, angle_3D _unitOrientations);
	public static class HWND extends PointerType {
		public HWND(Pointer address) {
			super(address);
		}
		public HWND() {
			super();
		}
	};
}
